# jitbox

./: .gitignore  CMakeLists.txt  README.md
jitbox.dir/Release/: jitbox.exe.recipe
jitbox.dir/Release/jitbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  jitbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: Timer.hpp  jitbox.cpp  jitbox.hpp
src/internal/: address.hpp  bytecode.hpp  compiletimeconstant.hpp  context.hpp  datatypes.hpp  instructionset.hpp  jit.hpp  jitboxinternal.hpp  printable.hpp  ptr.hpp  type.hpp
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
